src/test/ui/parser/issues/issue-70388-without-witness.stderr
error: unexpected `...`
  --> $DIR/issue-70388-without-witness.rs:7:13
   |
LL |     let Foo(...) = Foo(0);
   |             ^^^
   |             |
   |             not a valid pattern
   |             help: for a rest pattern, use `..` instead of `...`

error: unexpected `...`
  --> $DIR/issue-70388-without-witness.rs:8:13
   |
LL |     let [_, ..., _] = [0, 1];
   |             ^^^
   |             |
   |             not a valid pattern
   |             help: for a rest pattern, use `..` instead of `...`

error: aborting due to 2 previous errors

